--- a/app/src/main/res/layout/activity_prepare_shipment.xml
+++ b/app/src/main/res/layout/activity_prepare_shipment.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_bg"
-    android:orientation="vertical"
-    tools:context=".activity.OrderSearchActivity">
+    android:orientation="vertical">
 
     <include
         android:id="@+id/toolbar"
@@ -58,23 +57,23 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <!--            <AutoCompleteTextView-->
-            <!--                android:id="@+id/searchAutoComplete"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_marginHorizontal="@dimen/_24sdp"-->
-            <!--                android:background="@drawable/bg_edit_text"-->
-            <!--                android:drawableStart="@drawable/ic_search"-->
-            <!--                android:drawablePadding="12dp"-->
-            <!--                android:hint="@string/search_ellipse"-->
-            <!--                android:paddingHorizontal="16dp"-->
-            <!--                android:paddingVertical="14dp"-->
-            <!--                android:singleLine="true"-->
-            <!--                android:textAppearance="@style/inter_400_12_16"-->
-            <!--                android:textColor="@color/black"-->
-            <!--                app:layout_constraintEnd_toEndOf="parent"-->
-            <!--                app:layout_constraintStart_toStartOf="parent"-->
-            <!--                app:layout_constraintTop_toTopOf="parent" />-->
+                        <AutoCompleteTextView
+                            android:id="@+id/searchAutoComplete"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="@dimen/_24sdp"
+                            android:background="@drawable/bg_edit_text"
+                            android:drawableStart="@drawable/ic_search"
+                            android:drawablePadding="12dp"
+                            android:hint="@string/search_ellipse"
+                            android:paddingHorizontal="16dp"
+                            android:paddingVertical="14dp"
+                            android:singleLine="true"
+                            android:textAppearance="@style/inter_400_12_16"
+                            android:textColor="@color/black"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
 
             <!--            <Spinner-->
             <!--                android:id="@+id/searchAutoComplete"-->
@@ -89,12 +88,12 @@
             <!--                app:layout_constraintStart_toStartOf="parent"-->
             <!--                app:layout_constraintTop_toTopOf="parent" />-->
 
-            <androidx.appcompat.widget.AppCompatSpinner
+            <!--<androidx.appcompat.widget.AppCompatSpinner
                 android:id="@+id/searchAutoComplete"
                 style="@style/spinner_style"
                 android:layout_width="match_parent"
                 android:layout_marginHorizontal="@dimen/_24sdp"
-                android:background="@drawable/bg_spinner_white" />
+                android:background="@drawable/bg_spinner_white" />-->
 
             <TextView
                 android:id="@+id/txtSearch"
