--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,7 +14,17 @@
         android:src="@drawable/ic_logo"
         android:id="@+id/logoImageView"
         android:layout_width="@dimen/_120sdp"
-        android:layout_height="@dimen/_120sdp"
-        android:layout_marginBottom="@dimen/_24sdp" />
+        android:layout_height="@dimen/_120sdp" />
+
+    <TextView
+        android:layout_below="@+id/logoImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/myworkapp_io"
+        android:layout_centerInParent="true"
+        android:textColor="@color/white"
+        android:textAppearance="@style/inter_400_10_10"
+        android:fontFamily="@font/inter_semi_bold"
+        android:layout_gravity="center" />
 
 </RelativeLayout>
