--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,59 +8,134 @@
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <!-- Column # -->
         <TextView
             android:id="@+id/srNo"
-            android:layout_width="@dimen/_14sdp"
+            android:layout_width="@dimen/_20sdp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/padding_inside_table_field"
             android:layout_marginVertical="@dimen/padding_inside_table_field"
-            android:fontFamily="@font/inter_semi_bold"
             android:letterSpacing="-0.01"
-            android:text="9"
+            tools:text="2"
+            android:maxLines="1"
+            android:maxEms="2"
+            android:singleLine="true"
+            android:ellipsize="end"
             android:gravity="center"
             android:textAllCaps="true"
             android:textAppearance="@style/inter_400_10_16"
-            android:textColor="@color/color_181818" />
+            android:textColor="@color/secondary_dark_text_color"
+            android:fontFamily="@font/inter_regular"/>
 
+        <!-- Divider -->
         <View
-            android:id="@+id/verticalDivider1"
             android:layout_width="@dimen/table_divider_width"
             android:layout_height="match_parent"
             android:background="@color/bg_stroke_color" />
 
+        <!-- Column ITEM NAME - TYPE -->
         <TextView
             android:id="@+id/itemName"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/_80sdp"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/padding_inside_table_field"
-            android:layout_marginStart="@dimen/padding_inside_table_field"
             android:layout_weight="1"
-            android:text="Tote bin- Large"
-            android:textColor="@color/secondary_dark_text_color"
-            android:fontFamily="@font/inter_regular"
+            android:gravity="center"
+            android:letterSpacing="-0.01"
+            android:singleLine="true"
+            android:ellipsize="end"
+            tools:text="@string/item_name_type"
             android:textAppearance="@style/inter_400_10_16"
-            android:letterSpacing="-0.01" />
+            android:textColor="@color/secondary_dark_text_color"
+            android:fontFamily="@font/inter_regular"/>
 
         <View
-            android:id="@+id/verticalDivider2"
+            android:visibility="invisible"
             android:layout_width="@dimen/table_divider_width"
             android:layout_height="match_parent"
             android:background="@color/bg_stroke_color" />
 
-        <TextView
-            android:id="@+id/txtQty"
-            android:layout_width="@dimen/_100sdp"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/padding_inside_table_field"
-            android:layout_marginStart="@dimen/padding_inside_table_field"
-            android:text="TBD"
-            android:textAllCaps="true"
-            android:textColor="@color/secondary_dark_text_color"
-            android:fontFamily="@font/inter_regular"
-            android:textAppearance="@style/inter_400_10_16"
-            android:letterSpacing="-0.01" />
+            android:layout_weight="4"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txtQty"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/padding_inside_table_field"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:letterSpacing="-0.01"
+                tools:text="5"
+                android:textAllCaps="true"
+                android:textAppearance="@style/inter_400_10_16"
+                android:textColor="@color/secondary_dark_text_color"
+                android:fontFamily="@font/inter_regular" />
+
+            <View
+                android:visibility="invisible"
+                android:layout_width="@dimen/table_divider_width"
+                android:layout_height="match_parent"
+                android:background="@color/bg_stroke_color" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/padding_inside_table_field"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:letterSpacing="-0.01"
+                android:textAllCaps="true"
+                android:textAppearance="@style/inter_400_10_16"
+                android:text="0"
+                android:textColor="@color/secondary_dark_text_color"
+                android:fontFamily="@font/inter_regular"/>
+
+            <View
+                android:visibility="invisible"
+                android:layout_width="@dimen/table_divider_width"
+                android:layout_height="match_parent"
+                android:background="@color/bg_stroke_color" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/padding_inside_table_field"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:letterSpacing="-0.01"
+                android:text="0"
+                android:textAllCaps="true"
+                android:textAppearance="@style/inter_400_10_16"
+                android:textColor="@color/secondary_dark_text_color"
+                android:fontFamily="@font/inter_regular"/>
+
+            <View
+                android:visibility="invisible"
+                android:layout_width="@dimen/table_divider_width"
+                android:layout_height="match_parent"
+                android:background="@color/bg_stroke_color" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/padding_inside_table_field"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:letterSpacing="-0.01"
+                android:text="0"
+                android:textAllCaps="true"
+                android:textAppearance="@style/inter_400_10_16"
+                android:textColor="@color/secondary_dark_text_color"
+                android:fontFamily="@font/inter_regular"/>
+        </LinearLayout>
+
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
