--- a/app/src/main/res/layout/list_tag_item.xml
+++ b/app/src/main/res/layout/list_tag_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/lnrItem"
+    android:id="@+id/ll_list"
     android:padding="@dimen/_8sdp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/TvTagUii"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -35,7 +36,7 @@
 
         <TextView
             android:gravity="end"
-            android:id="@+id/txtLastUpdatedTime"
+            android:id="@+id/txtUnknown"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -43,7 +44,7 @@
             android:textAppearance="@style/inter_400_10_10"
             android:letterSpacing="-0.02"
             android:textColor="@color/color_0F0F0F"
-            tools:text="Unknown" />
+            android:text="Unknown" />
 
     </LinearLayout>
 
@@ -62,6 +63,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/txtCarrier"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -74,6 +76,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/TvTagRssi"
             android:gravity="end"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
@@ -101,6 +104,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/requestedBy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -113,6 +117,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/TvTagCount"
             android:gravity="end"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
