--- a/app/src/main/res/layout/listtag_items.xml
+++ b/app/src/main/res/layout/listtag_items.xml
@@ -28,7 +28,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/TvTagCount"
@@ -37,7 +37,7 @@
             android:layout_weight="1"
             android:paddingTop="3dp"
             android:paddingBottom="2dp"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/TvTagRssi"
