--- a/app/src/main/res/layout/fragment_inventory_items.xml
+++ b/app/src/main/res/layout/fragment_inventory_items.xml
@@ -432,7 +432,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <ImageView
                         android:src="@drawable/ic_scan"
