--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_50sdp"
+    android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
     android:orientation="horizontal">
 
+    <TextView
+        android:id="@+id/txtMyWorkApp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/myworkapp_io"
+        android:textColor="@color/white"
+        android:layout_marginStart="@dimen/_6sdp"
+        android:textAppearance="@style/inter_400_10_10"
+        android:textSize="@dimen/_10ssp" />
+
     <RelativeLayout
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/txtMyWorkApp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -38,12 +49,14 @@
 
 
     <ImageView
+        android:layout_below="@+id/txtMyWorkApp"
+        android:layout_alignParentEnd="true"
         android:id="@+id/btnProfile"
         android:layout_width="@dimen/_40sdp"
         android:layout_height="@dimen/_40sdp"
-        android:layout_gravity="end|center_vertical"
+        android:layout_gravity="center_vertical"
         android:layout_marginEnd="@dimen/_10sdp"
         android:padding="@dimen/_6sdp"
         android:src="@drawable/ic_dummy_profile" />
 
-</FrameLayout>
+</RelativeLayout>
