--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -8,7 +8,7 @@
         android:id="@+id/lnrItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/_24sdp"
+        android:layout_marginHorizontal="@dimen/_16sdp"
         android:background="@drawable/bg_filled_outlined"
         android:orientation="vertical"
         android:layout_marginBottom="@dimen/_6sdp"
@@ -48,14 +48,19 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/txtLastUpdatedTime"
+                android:id="@+id/txtStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:background="@drawable/bg_order_details"
+                android:backgroundTint="@color/color_bg_status_initiated"
                 android:fontFamily="@font/inter_regular"
                 android:gravity="end"
-                android:textColor="@color/secondary_dark_text_color"
-                tools:text="12/12/2024" />
+                android:paddingHorizontal="4dp"
+                android:paddingVertical="4dp"
+                android:textAppearance="@style/inter_400_10_10"
+                android:textColor="@color/color_text_status_initiated"
+                tools:text="pending" />
 
         </LinearLayout>
 
@@ -63,7 +68,70 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="6dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/inter_regular"
+                    android:text="Req by:"
+                    android:textColor="@color/secondary_text_color" />
+
+
+                <TextView
+                    android:id="@+id/reqBy"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    android:fontFamily="@font/inter_bold"
+                    android:textColor="@color/secondary_dark_text_color"
+                    tools:text="Tony Blair-Texas Grains" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/reqDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_4sdp"
+                        android:fontFamily="@font/inter_bold"
+                        android:textColor="@color/secondary_dark_text_color"
+                        tools:text="11/11/11" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginTop="6dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -93,13 +161,48 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:gravity="end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/inter_regular"
+                        android:text="Qty:"
+                        android:textColor="@color/secondary_text_color" />
+
+
+                    <TextView
+                        android:id="@+id/txtRequiredQuantity"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_4sdp"
+                        android:fontFamily="@font/inter_bold"
+                        android:textColor="@color/secondary_dark_text_color"
+                        tools:text="200" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="6dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -114,18 +217,55 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:fontFamily="@font/inter_regular"
-                    android:text="Request By:"
+                    android:text="Date:"
                     android:textColor="@color/secondary_text_color" />
 
 
                 <TextView
-                    android:id="@+id/reqBy"
+                    android:id="@+id/reqDate1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_4sdp"
                     android:fontFamily="@font/inter_bold"
                     android:textColor="@color/secondary_dark_text_color"
-                    tools:text="Tony Blair-Texas Grains" />
+                    tools:text="11/11/11" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="6dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/inter_regular"
+                    android:text="Qty:"
+                    android:textColor="@color/secondary_text_color" />
+
+
+                <TextView
+                    android:id="@+id/txtRequiredQuantity1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    android:fontFamily="@font/inter_bold"
+                    android:textColor="@color/secondary_dark_text_color"
+                    tools:text="200" />
 
             </LinearLayout>
 
