--- a/app/src/main/res/layout/item_order_shipment.xml
+++ b/app/src/main/res/layout/item_order_shipment.xml
@@ -64,7 +64,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/txtQty"
+                android:id="@+id/txtTotal"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/padding_inside_table_field"
@@ -84,6 +84,7 @@
                 android:background="@color/bg_stroke_color" />
 
             <TextView
+                android:id="@+id/txtShipped"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/padding_inside_table_field"
@@ -103,25 +104,7 @@
                 android:background="@color/bg_stroke_color" />
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="@dimen/padding_inside_table_field"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:letterSpacing="-0.01"
-                android:text="0"
-                android:textAllCaps="true"
-                android:textAppearance="@style/inter_400_10_16"
-                android:textColor="@color/secondary_dark_text_color"
-                android:fontFamily="@font/inter_regular"/>
-
-            <View
-                android:visibility="invisible"
-                android:layout_width="@dimen/table_divider_width"
-                android:layout_height="match_parent"
-                android:background="@color/bg_stroke_color" />
-
-            <TextView
+                android:id="@+id/txtAdd"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/padding_inside_table_field"
