--- a/app/src/main/res/layout/item_order_shipment.xml
+++ b/app/src/main/res/layout/item_order_shipment.xml
@@ -6,6 +6,8 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/itemOrder"
+        android:background="?android:attr/selectableItemBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
