--- a/app/src/main/res/layout/activity_prepare_shipment_1.xml
+++ b/app/src/main/res/layout/activity_prepare_shipment_1.xml
@@ -56,7 +56,7 @@
 
 
                         <TextView
-                            android:id="@+id/shipmentId"
+                            android:id="@+id/txtShipmentId"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_2sdp"
