--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -84,6 +84,7 @@
                 android:background="@color/bg_stroke_color" />
 
             <TextView
+                android:id="@+id/txtShipped"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/padding_inside_table_field"
@@ -103,6 +104,7 @@
                 android:background="@color/bg_stroke_color" />
 
             <TextView
+                android:id="@+id/txtAdd"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/padding_inside_table_field"
@@ -122,6 +124,7 @@
                 android:background="@color/bg_stroke_color" />
 
             <TextView
+                android:id="@+id/txtBalance"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/padding_inside_table_field"
