--- a/app/src/main/res/layout/activity_inspection_process.xml
+++ b/app/src/main/res/layout/activity_inspection_process.xml
@@ -11,88 +11,10 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar_layout" />
 
-    <LinearLayout
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
-        android:layout_marginHorizontal="@dimen/_24sdp"
-        android:layout_marginTop="@dimen/_24sdp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="@dimen/_36sdp"
-            android:layout_height="@dimen/_36sdp"
-            android:background="@drawable/bg_filled_outlined"
-            android:backgroundTint="@color/color_ff0000"
-            android:importantForAccessibility="no"
-            android:scaleType="centerInside"
-            android:src="@drawable/ic_delete" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginHorizontal="@dimen/_16sdp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="@drawable/bg_order_details"
-                android:backgroundTint="@color/color_EFF0F4"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackgroundBorderless"
-                android:gravity="center_vertical|center"
-                android:paddingHorizontal="@dimen/_8sdp"
-                android:text="Scan Count"
-                android:textAppearance="@style/inter_400_12_16"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="-4dp"
-                android:background="@drawable/bg_scan_count"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackgroundBorderless"
-                android:gravity="center_vertical|center"
-                android:paddingHorizontal="@dimen/_17sdp"
-                tools:text="50"
-                android:textAppearance="@style/inter_400_12_16"
-                android:textColor="@color/black" />
-
-        </LinearLayout>
-
-
-        <TextView
-            android:id="@+id/save"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/bg_filled_outlined"
-            android:backgroundTint="@color/color_388E3C"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackgroundBorderless"
-            android:gravity="center_vertical|center"
-            android:text="Save"
-            android:textAppearance="@style/inter_400_12_16"
-            android:textColor="@color/color_388E3C" />
-    </LinearLayout>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/orderDetailsButton"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_42sdp"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom"
-        android:layout_marginHorizontal="@dimen/_24sdp"
-        android:layout_marginVertical="@dimen/_12sdp"
-        android:background="@drawable/button_background"
-        android:backgroundTint="@color/color_388E3C"
-        android:text="Scan"
-        android:textAllCaps="false"
-        android:textAppearance="@style/inter_700_14_12"
-        android:textColor="@color/white" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar" />
 
 </RelativeLayout>
