--- a/app/src/main/res/layout/activity_inventory_items.xml
+++ b/app/src/main/res/layout/activity_inventory_items.xml
@@ -7,42 +7,9 @@
     android:layout_height="match_parent"
     tools:context=".activity.InventoryItemsActivity">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="@color/app_color"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp">
-
-        <ImageButton
-            android:id="@+id/imageButtonBack"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:background="@android:color/transparent"
-            android:clickable="true"
-            android:focusable="true"
-            android:layout_gravity="center_vertical"
-            android:foreground="?android:attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/back_24"
-            tools:ignore="ContentDescription" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent" />
-
-        <TextView
-            android:id="@+id/textViewTitle"
-            style="@style/ToolbarTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="1"
-            android:textColor="@color/white"
-            android:text="Scan Item" />
-
-    </FrameLayout>
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_layout" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
