--- a/app/src/main/res/layout/activity_shipment_detail.xml
+++ b/app/src/main/res/layout/activity_shipment_detail.xml
@@ -312,7 +312,7 @@
                     android:fontFamily="@font/inter_regular"
                     android:gravity="center"
                     android:letterSpacing="-0.01"
-                    android:text="ADD"
+                    android:text="REQ"
                     android:textStyle="bold"
                     android:textAllCaps="true"
                     android:textAppearance="@style/inter_400_10_16"
@@ -332,7 +332,7 @@
                     android:fontFamily="@font/inter_regular"
                     android:gravity="center"
                     android:letterSpacing="-0.01"
-                    android:text="BAL"
+                    android:text="FOUND"
                     android:textStyle="bold"
                     android:textAllCaps="true"
                     android:textAppearance="@style/inter_400_10_16"
@@ -346,7 +346,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/lnrContent"
             tools:itemCount="3"
-            tools:listitem="@layout/item_order" />
+            tools:listitem="@layout/item_shipment_count" />
 
     </RelativeLayout>
 
