--- a/app/src/main/res/layout/activity_prepare_shipment.xml
+++ b/app/src/main/res/layout/activity_prepare_shipment.xml
@@ -119,7 +119,7 @@
                         android:id="@+id/rcvOrders"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_above="@+id/orderDetailsButton"
+                        android:layout_above="@+id/receiveShipmentButton"
                         tools:itemCount="4"
                         tools:listitem="@layout/item_search"
                         tools:visibility="visible" />
