--- a/app/src/main/res/layout/activity_shipment_list.xml
+++ b/app/src/main/res/layout/activity_shipment_list.xml
@@ -101,7 +101,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_16sdp"
                 android:layout_marginVertical="@dimen/_12sdp"
-                android:text="Order Search"
+                android:text="Shipment Search"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_16ssp"
                 android:textStyle="bold" />
@@ -119,7 +119,7 @@
                         android:id="@+id/rcvOrders"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_above="@+id/orderDetailsButton"
+                        android:layout_above="@+id/receiveShipmentButton"
                         tools:itemCount="4"
                         tools:listitem="@layout/item_shipment"
                         tools:visibility="visible" />
@@ -133,7 +133,7 @@
                         android:visibility="gone" />
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/orderDetailsButton"
+                        android:id="@+id/receiveShipmentButton"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_42sdp"
                         android:layout_alignParentBottom="true"
