--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="table_field_text_size">12sp</dimen>
     <dimen name="item_margin">16dp</dimen>
     <dimen name="padding_inside_table_field">@dimen/_4sdp</dimen>
+    <dimen name="dialog_horizontal_margin">20dp</dimen>
+
 </resources>
